; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_lp.c_lpphy_tx_pctl_init_sw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_phy_lp.c_lpphy_tx_pctl_init_sw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32 }
%struct.lpphy_tx_gains = type { i32, i32, i32, i64 }

@IEEE80211_BAND_2GHZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*)* @lpphy_tx_pctl_init_sw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lpphy_tx_pctl_init_sw(%struct.b43_wldev* %0) #0 {
  %2 = alloca %struct.b43_wldev*, align 8
  %3 = alloca %struct.lpphy_tx_gains, align 8
  store %struct.b43_wldev* %0, %struct.b43_wldev** %2, align 8
  %4 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %5 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call i64 @b43_current_band(i32 %6)
  %8 = load i64, i64* @IEEE80211_BAND_2GHZ, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 0
  store i32 4, i32* %11, align 8
  %12 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 1
  store i32 12, i32* %12, align 4
  %13 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 2
  store i32 12, i32* %13, align 8
  %14 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 3
  store i64 0, i64* %14, align 8
  br label %20

15:                                               ; preds = %1
  %16 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 0
  store i32 7, i32* %16, align 8
  %17 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 1
  store i32 14, i32* %17, align 4
  %18 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 2
  store i32 15, i32* %18, align 8
  %19 = getelementptr inbounds %struct.lpphy_tx_gains, %struct.lpphy_tx_gains* %3, i32 0, i32 3
  store i64 0, i64* %19, align 8
  br label %20

20:                                               ; preds = %15, %10
  %21 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %22 = call i32 @lpphy_set_tx_gains(%struct.b43_wldev* %21, %struct.lpphy_tx_gains* byval(%struct.lpphy_tx_gains) align 8 %3)
  %23 = load %struct.b43_wldev*, %struct.b43_wldev** %2, align 8
  %24 = call i32 @lpphy_set_bb_mult(%struct.b43_wldev* %23, i32 150)
  ret void
}

declare dso_local i64 @b43_current_band(i32) #1

declare dso_local i32 @lpphy_set_tx_gains(%struct.b43_wldev*, %struct.lpphy_tx_gains* byval(%struct.lpphy_tx_gains) align 8) #1

declare dso_local i32 @lpphy_set_bb_mult(%struct.b43_wldev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
